# pib-backend_to_eleven

./: .gitignore  .gitmodules  README.md  UPGRADE.md  docker-compose.yaml
pib_api/client/pib_api_client/: facial_expression_client.py  gesture_client.py  ip_client.py  llm_settings_client.py  motion_capture_mapping_client.py  motion_capture_settings_client.py  movement_sequence_client.py  movement_settings_client.py  pose_client.py  system_settings_client.py  voice_assistant_client.py
pib_api/flask/: Dockerfile  commands.py  pibdata_old.db  requirements.txt
pib_api/flask/app/: __init__.py
pib_api/flask/controller/: bricklet_pin_controller.py  facial_expression_controller.py  gesture_controller.py  learning_group_controller.py  llm_settings_controller.py  motion_capture_joint_mapping_controller.py  motion_capture_settings_controller.py  movement_sequence_controller.py  movement_settings_controller.py  pose_controller.py  program_controller.py  (+3 more)
pib_blockly/pib_blockly_client/: pib_blockly_client.py
ros_packages/camera/: Dockerfile
ros_packages/datatypes/: CMakeLists.txt
ros_packages/display/: Dockerfile
ros_packages/gesture_control/: Dockerfile  package.xml  setup.py
ros_packages/gesture_control/gesture_control/: depth_fusion.py  gesture_capture.py  gesture_node.py  retargeting.py  vendor_mediapipe_utils.py
ros_packages/motors/: package.xml
ros_packages/voice_assistant/: Dockerfile
setup/: setup-pib.sh  update-pib.sh
setup/installation_scripts/: docker_install.sh
setup/setup_files/: pib_audio_volume.service  xhost_enable_local.service
(+110 files in other folders)
