<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gesture_control</name>
  <version>0.0.0</version>
  <description>Applies hand/body landmarks streamed from a browser (via rosbridge) to pib's motors - see mediapipe_pose_tracker history in camera package for why detection moved off-device.</description>
  <maintainer email="team@pib.rocks">pib</maintainer>
  <license>Agpl3.0</license>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>datatypes</depend>
  <exec_depend>rclpy</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
